Froze the bundle pool when saving to disk, to avoid accepting and losing bundles (#169)
* Froze the bundle pool when saving to disk, to avoid accepting and losing bundles

Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>

* Apply suggestions from code review

Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>

---------

Signed-off-by: Fabio Di Fabio <fabio.difabio@consensys.net>